--- a/css/style.css
+++ b/css/style.css
@@ -75,8 +75,10 @@ hr {
     border-radius: 2%;
     margin-left: 10%;
 }
+/* Nav SKills */
 
 .skill {
+    font-size: 100%;
     color: white;
     font-size: 26px;
 }
@@ -93,7 +95,7 @@ hr {
     margin-top: 3%;
     letter-spacing: 1PX;
 }
-
+/* ------------ */
 
 
 
