--- a/css/style.css
+++ b/css/style.css
@@ -3,36 +3,43 @@ body{
     padding: 0;
     background-color: #000000f8;
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-    background: linear-gradient(110grad,black, rgb(80, 78, 78));
+    background: linear-gradient(110grad,black, rgb(170, 161, 39));
 }
 
-.navbar{
-    position: fixed;
-    width: 100%;
-    height: 8%;
-    box-shadow: 10px 10px 15px black;
-    z-index: 1;
-    
+
+.container-fluid{
  
 }
 
+.navbar{
+    width: 100%;
+    box-shadow: 5px 5px 7px black;
+    z-index: 1;
+}
+
+
 #navbarNavAltMarkup{
-   margin-left: 65%;
+  
+  margin-left: 65%;
+  background-color: white;
+  
+   
 }
 
 
 .nav-link{
     display: flex; 
-    padding: 2%;
+   
   
 }
 
-.sombra{
-    background-color: aqua;
+button .navbar-toggler{
+    background-color: red;
 }
 
-#inicio, #sobremim, #skill, #projetos, #contatos{
-    height: 100vh;
+
+.inicio, .sobremim, .skill, .projetos, .contatos{
+    padding-top: 3%;
     
 }
 
@@ -77,6 +84,7 @@ hr {
 
 /* SOBRE MIM */
 
+
 .sobre-texto{
     background-color: white;
     font-family: 'Times New Roman', Times, serif;
@@ -84,8 +92,7 @@ hr {
     padding: 4%;
     border-radius: 4%;
     text-align: center;
-    margin-bottom: 100px ;
-    display: flow-root;
+ 
    
 }
 
@@ -94,7 +101,7 @@ hr {
 }
 
 .imagem-perfil{
-    width: 30%;
+    width: 25%;
 }
 
 /* -- FIM SOBRE MIM */
