Realização de atualização

--- a/css/style.css
+++ b/css/style.css
@@ -171,4 +171,8 @@ hr {
     width: 55px;
     margin-right: 10px;
 }
-/* ---------------- */
+/* ---------------- FIM PROJETOS ---- */
+
+
+/* -------------- CONTANTOS  ---------  */
+
