--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@ body{
     padding: 0;
     background-color: #000000f8;
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-    background: linear-gradient(110grad,black, rgb(170, 161, 39));
+    background: linear-gradient(0grad,rgba(0, 17, 255, 0.849), rgb(0, 0, 0));
 }
 
 .navbar{
@@ -41,7 +41,7 @@ button .navbar-toggler{
 
 .apresentacao {
     text-align: left;
-    padding: 20% 2% 10% 2%;
+    padding: 15% 2% 10% 2%;
     width: 100%;
     height: 100%;
     
@@ -99,7 +99,7 @@ hr {
 
 
 .sobre-texto{
-    background-color: white;
+    background-color:rgba(245, 222, 179, 0.829);
     font-family: 'Times New Roman', Times, serif;
     font-size: 24px;
     padding: 4%;
@@ -111,10 +111,13 @@ hr {
 
 .minha-imagem{
     text-align: center;
+    
 }
 
 .imagem-perfil{
     width: 25%;
+    border-radius: 100%;
+    margin: 4%;
 }
 
 /* -- FIM SOBRE MIM */
