--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@ body{
     margin: 0;
     padding: 0;
     background-color: #000000f8;
-    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     background: linear-gradient(0grad,rgba(0, 17, 255, 0.849), rgb(0, 0, 0));
 }
 
@@ -14,25 +14,37 @@ body{
 }
 
 
-#navbarNavAltMarkup{
-  
-  margin-left: 70%;
-  background-color: white;
-  
-   
+.navbar-toggler-icon {
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3E%3Cpath stroke='rgba%280, 0, 0, 1%29' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3E%3C/svg%3E");
 }
 
 
 .nav-link{
     display: flex; 
    
-  
 }
 
-button .navbar-toggler{
-    background-color: red;
+
+.botao-navegacao {
+    background-color: transparent;
+    border: none;
+    padding: 10px 0 10px 0;
+    margin: 0;
 }
 
+.botao-navegacao .nav-link {
+    color: #000000; /* Cor do texto */
+    text-decoration: none;
+    padding: 8px 16px;
+    display: block;
+    transition: background-color 0.3s, color 0.3s;
+}
+
+.botao-navegacao .nav-link:hover, .botao-navegacao .nav-link.active  {
+    background-color: #06054d; /* Cor de fundo ao passar o mouse ou quando ativo */
+    color: rgb(255, 255, 255); /* Cor do texto ao passar o mouse ou quando ativo */
+    border-radius: 4px; /* Opcional: bordas arredondadas */
+}
 
 .inicio, .sobremim, .skill, .projetos, .contatos{
     padding-top: 3%;
@@ -49,7 +61,7 @@ button .navbar-toggler{
 
 .apresentacao h1{
     color: rgba(247, 213, 18, 0.979);
-    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-family: trial-black2,Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     font-size: 5vw; /* Tamanho de fonte proporcional à largura da viewport */
     line-height: 1.1;
     word-break: break-word;
@@ -65,15 +77,13 @@ button .navbar-toggler{
   .apresentacao h1 {
     margin-top: 40%;
     margin-bottom: 10%;
-    font-size: 13vw; /* Ajuste do tamanho da fonte para telas muito pequenas */
+    font-size: 9vw; /* Ajuste do tamanho da fonte para telas muito pequenas */
   }
 }
     
 
 
-.imagens{
-    /* padding: 0 0 4% 10%; */
-}
+
 .imagens img {
  width: 10%;
  padding: 1%;
@@ -92,22 +102,14 @@ hr {
     letter-spacing:3px;
     font-size: 50px;
     font-weight: bold;
+    font-family: 'Times New Roman', Times, serif;
 }
 
 
 /* SOBRE MIM */
 
 
-.sobre-texto{
-    background-color:rgba(245, 222, 179, 0.829);
-    font-family: 'Times New Roman', Times, serif;
-    font-size: 24px;
-    padding: 4%;
-    border-radius: 4%;
-    text-align: center;
- 
-   
-}
+
 
 .minha-imagem{
     text-align: center;
@@ -119,50 +121,140 @@ hr {
     border-radius: 100%;
     margin: 4%;
 }
+@media (max-width: 768px) {
+    .imagem-perfil{
+        width: 35%;
+    }
+    .titulo{
+        font-size: 35px;
+    }
+}
+@media (max-width: 576px) {
+    .imagem-perfil{
+        width: 35%;
+    }
+    .titulo{
+        font-size: 25px;
+    }
+}
+
+.sobre-texto{
+    background-color:rgba(245, 222, 179, 0.829);
+    font-family: 'Times New Roman', Times, serif;
+    font-size: 20px;
+    padding: 4%;
+    border-radius: 4%;
+    text-align: left;
+    border: 10px solid rgb(255, 255, 255);  
+    color: #000000;
+    letter-spacing: 1px;
+}
+
+.sobre-texto h4{
+    /* text-align: right !important; */
+    background-color: rgba(255, 255, 255, 0.349);
+    display: flex;
+}
+.sobre-texto a {
+    text-decoration: none;
+    color: #000000;
+    font-style: italic;
+}
 
 /* -- FIM SOBRE MIM */
 
 /* Nav SKills */
 
+.skill-const{
+    background-color:rgba(245, 222, 179, 0.829); 
+    padding: 4%;
+    border-radius: 4%;
+    border: 10px solid rgb(255, 255, 255);  
+}
+
 .skill {
     font-size: 100%;
-    color: white;
-    font-size: 26px;
+    color: rgb(0, 0, 0);
+    font-size: 16px;
 }
 
 .sub-skill{
-    font-size: 25px;
-    letter-spacing: 2px;
+    letter-spacing: 1px;
     text-align: center;
     margin-bottom: 3%;
+    margin-top: 3%;
+    text-decoration:underline rgba(245, 222, 179, 0.829); 
 }
 
 .soft-skills{
     text-align: center;   
-    
     margin-top: 3%;
-    letter-spacing: 1px;
-    font-size: 80%;
+    font-size: 1vw;
 }
+
+.icon-programacao{
+    width: 35%;
+    margin-right: 10px;
+}
+
+@media (max-width: 768px) {
+    .soft-skills {
+      padding: 7px 0px 7px 0px ;
+      font-size: 12px; /* Ajuste do tamanho da fonte para telas menores */
+    }
+    .icon-programacao{
+        width: 45%;
+        margin-right: 10px;
+    }
+  }
+  @media (max-width: 576px) {
+    .soft-skills {
+        padding: 7px 0px 7px 0px ;
+      font-size: 13px; /* Ajuste do tamanho da fonte para telas muito pequenas */
+    }
+    .icon-programacao{
+        width: 45%;
+        margin-right: 10px;
+    }
+  }
 /* -- FIM NAV Skills */
 
 
 
 /* Nav Projetos */
 
+.const{
+    
+    
+    padding: 4%;
+    border-radius: 1%;
+   
+    
+}
+
+.cartao-projeto{
+    background-color:rgba(245, 222, 179, 0.829); 
+    border: 3px ridge black;
+    padding: 20px;
+}
+
 
 .card-title{
-    text-align: center;
+    text-align: left;
     letter-spacing: 1px;
     font-size: 24px;
     font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-weight: bold;
+    text-decoration:underline rgba(245, 222, 179, 0.829); 
+
 }
 
 .card-text{
-    text-align: justify;
     font-family: 'Times New Roman', Times, serif;
-    font-size: 18px;
+    font-size: 20px;
+    letter-spacing: 1px;
+    padding: 1%;
+    text-align: left;
 }
 
 .card-link{
@@ -171,10 +263,28 @@ hr {
     display: flex;
 }
 
-.img-fluid{
-    margin-top: 70%;
-    margin-bottom: 30%;
+.fundo-imagem{
+    background-color: white;
+    border: 3px groove rgba(0, 7, 109, 0.774);
+    padding: 7%;
 }
+
+.img-fluid{
+    margin-top: 40%;
+    margin-bottom: 40%;
+}
+@media (max-width: 768px) {
+    .img-fluid{
+        margin-top: 20%;
+        margin-bottom: 10%;
+    }
+  }
+  @media (max-width: 576px) {
+    .img-fluid{
+        margin-top: 20%;
+        margin-bottom: 10%;
+    }
+  }
 
 .imgun{
     margin-top: 30% !important;
@@ -183,32 +293,25 @@ hr {
 
 .imgdupli{
     margin-top: 0 !important;
-    margin-bottom: 20%;
+    margin-bottom: 10%;
 }
 
 .card-link a{
     margin-right: 10px;
+    padding: 1%;
+    
 }
 
-/* Cards */
+
 
 .conj-div{
-    display: flex;
+    
+    text-align: center;
+  
 }
 
-.conj-icones{
-    padding: 0;
-    list-style: none;
-}
 
-.text-muted{
-    display: flex;
-}
 
-.icon-programacao{
-    width: 15%;
-    margin-right: 10px;
-}
 /* ---------------- FIM PROJETOS ---- */
 
 
@@ -219,10 +322,15 @@ hr {
 }
 
 .contato p {
-    color: white;
+    color: rgb(255, 255, 255);
     text-align: left;
     font-size: 20px;
     padding-top: 25%;
+}
+
+.icon-contato img{
+    width: 10%;
+    margin: 10px;
 }
 
 
@@ -240,7 +348,17 @@ footer i {
     color: white;
 }
 
+.text-contato{
+    background-color:rgba(245, 222, 179, 0.829);
+    font-family: 'Times New Roman', Times, serif;
+    font-size: 20px;
+    padding: 2%;
+    text-align: center;
+    border: 10px groove rgb(255 237 237); 
+    color: #000000;
+    letter-spacing: 1px;
 
+}
 
 .social-icons{
     padding: 0.5%;
