--- a/css/style.css
+++ b/css/style.css
@@ -2,9 +2,9 @@ body{
     
     margin: 0;
     padding: 0;
-    background-color: #000000f8;
+    background-image: url("../img/plano2.jpg");
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    background: linear-gradient(0grad,rgba(0, 17, 255, 0.849), rgb(0, 0, 0));
+    
 }
 
 .navbar{
@@ -41,8 +41,8 @@ body{
 }
 
 .botao-navegacao .nav-link:hover, .botao-navegacao .nav-link.active  {
-    background-color: #06054d; /* Cor de fundo ao passar o mouse ou quando ativo */
-    color: rgb(255, 255, 255); /* Cor do texto ao passar o mouse ou quando ativo */
+    background-color: #fbff00cc; /* Cor de fundo ao passar o mouse ou quando ativo */
+    color: rgb(0, 0, 0); /* Cor do texto ao passar o mouse ou quando ativo */
     border-radius: 4px; /* Opcional: bordas arredondadas */
 }
 
@@ -62,7 +62,7 @@ body{
 .apresentacao h1{
     color: rgba(247, 213, 18, 0.979);
     font-family: trial-black2,Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-    font-size: 5vw; /* Tamanho de fonte proporcional à largura da viewport */
+    font-size: 4vw; /* Tamanho de fonte proporcional à largura da viewport */
     line-height: 1.1;
     word-break: break-word;
 }
@@ -102,7 +102,7 @@ hr {
     letter-spacing:3px;
     font-size: 50px;
     font-weight: bold;
-    font-family: 'Times New Roman', Times, serif;
+    font-family: Graphica2,'Times New Roman', Times, serif;
 }
 
 
@@ -161,6 +161,18 @@ hr {
     font-style: italic;
 }
 
+@media(max-width: 768px){
+ .sobre-texto p {
+    font-size:medium;
+    text-align: justify;
+ }
+}
+
+@media (max-width: 576px) {
+
+
+}
+
 /* -- FIM SOBRE MIM */
 
 /* Nav SKills */
@@ -184,6 +196,8 @@ hr {
     margin-bottom: 3%;
     margin-top: 3%;
     text-decoration:underline rgba(245, 222, 179, 0.829); 
+    font-family: Graphica2,'Courier New', Courier, monospace;
+    font-size: xx-large;
 }
 
 .soft-skills{
@@ -203,8 +217,11 @@ hr {
       font-size: 12px; /* Ajuste do tamanho da fonte para telas menores */
     }
     .icon-programacao{
-        width: 45%;
+        width: 55%;
         margin-right: 10px;
+    }
+    .sub-skill{
+        font-size: medium;
     }
   }
   @media (max-width: 576px) {
@@ -213,8 +230,11 @@ hr {
       font-size: 13px; /* Ajuste do tamanho da fonte para telas muito pequenas */
     }
     .icon-programacao{
-        width: 45%;
+        width: 55%;
         margin-right: 10px;
+    }
+    .sub-skill{
+        font-size: medium;
     }
   }
 /* -- FIM NAV Skills */
@@ -224,13 +244,16 @@ hr {
 /* Nav Projetos */
 
 .const{
-    
-    
     padding: 4%;
     border-radius: 1%;
-   
     
 }
+
+.col{
+     display: flex;
+    align-items: center; 
+} 
+
 
 .cartao-projeto{
     background-color:rgba(245, 222, 179, 0.829); 
@@ -242,8 +265,8 @@ hr {
 .card-title{
     text-align: left;
     letter-spacing: 1px;
-    font-size: 24px;
-    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: 28px;
+    font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     font-weight: bold;
     text-decoration:underline rgba(245, 222, 179, 0.829); 
 
@@ -251,7 +274,7 @@ hr {
 
 .card-text{
     font-family: 'Times New Roman', Times, serif;
-    font-size: 20px;
+    font-size: large;
     letter-spacing: 1px;
     padding: 1%;
     text-align: left;
@@ -260,45 +283,30 @@ hr {
 .card-link{
     font-style: italic;
     letter-spacing: 1px;
-    display: flex;
+  
 }
 
 .fundo-imagem{
-    background-color: white;
+    background-color: rgba(255, 255, 255, 0.829);
     border: 3px groove rgba(0, 7, 109, 0.774);
-    padding: 7%;
+    padding: 0.5%;
+    width: 100%;
+    height: 80%;
+    display: flex; 
 }
 
 .img-fluid{
-    margin-top: 40%;
-    margin-bottom: 40%;
-}
-@media (max-width: 768px) {
-    .img-fluid{
-        margin-top: 20%;
-        margin-bottom: 10%;
-    }
-  }
-  @media (max-width: 576px) {
-    .img-fluid{
-        margin-top: 20%;
-        margin-bottom: 10%;
-    }
-  }
-
-.imgun{
-    margin-top: 30% !important;
-    margin-bottom: 0 !important;
+    align-items: center;
+    width: 90%;
+    margin-left: 5%;
 }
 
-.imgdupli{
-    margin-top: 0 !important;
-    margin-bottom: 10%;
-}
 
 .card-link a{
-    margin-right: 10px;
+    margin-right: 5px;
+    width: 10%;
     padding: 1%;
+    margin-top: 5%;
     
 }
 
@@ -309,6 +317,39 @@ hr {
     text-align: center;
   
 }
+
+
+@media (max-width: 768px) {
+    .card-title{
+        font-size: 22px;
+        text-align: center;
+    }
+    .card-text{
+        text-align: justify;
+    }
+    .img-fluid{
+        width: 80%;
+        margin-left: 10%;
+    }
+    
+
+   
+  }
+  @media (max-width: 576px) {
+    .card-title{
+        text-align: center;
+        font-size: 22px;
+    }
+    .card-text{
+        text-align: justify;
+    }
+    .img-fluid{
+
+        margin-left: 10%;
+    }
+    
+  }
+
 
 
 
