--- a/css/style.css
+++ b/css/style.css
@@ -24,6 +24,10 @@ body{
    
 }
 
+li{
+    text-align: center;
+}
+
 
 .botao-navegacao {
     background-color: transparent;
@@ -41,7 +45,7 @@ body{
 }
 
 .botao-navegacao .nav-link:hover, .botao-navegacao .nav-link.active  {
-    background-color: #fbff00cc; /* Cor de fundo ao passar o mouse ou quando ativo */
+    background-color: #e9da11cc; /* Cor de fundo ao passar o mouse ou quando ativo */
     color: rgb(0, 0, 0); /* Cor do texto ao passar o mouse ou quando ativo */
     border-radius: 4px; /* Opcional: bordas arredondadas */
 }
@@ -53,11 +57,32 @@ body{
 
 .apresentacao {
     text-align: left;
-    padding: 15% 2% 10% 2%;
+    padding: 10% 2% 10% 2%;
     width: 100%;
     height: 100%;
     
 }
+
+.imagens img {
+    width: 10%;
+    padding: 1%;
+}
+   
+hr {
+       color: white;
+       width: 100%;
+       height: 1px;
+       border-top: 1px solid white;
+}
+   
+.titulo {
+       color: rgba(247, 213, 18, 0.979);
+       text-align: center;
+       letter-spacing:3px;
+       font-size: 50px;
+       font-weight: bold;
+       font-family: Graphica2,'Times New Roman', Times, serif;
+}   
 
 .apresentacao h1{
     color: rgba(247, 213, 18, 0.979);
@@ -67,48 +92,21 @@ body{
     word-break: break-word;
 }
 @media (max-width: 768px) {
-  .apresentacao h1 {
-    margin-top: 40%;
+     .apresentacao h1 {
+    margin-top: 30%;
     margin-bottom: 10%;
-    font-size: 11vw; /* Ajuste do tamanho da fonte para telas menores */
+    font-size: 10vw; /* Ajuste do tamanho da fonte para telas menores */
   }
 }
 @media (max-width: 576px) {
   .apresentacao h1 {
-    margin-top: 40%;
+    margin-top: 30%;
     margin-bottom: 10%;
     font-size: 9vw; /* Ajuste do tamanho da fonte para telas muito pequenas */
   }
 }
     
-
-
-
-.imagens img {
- width: 10%;
- padding: 1%;
-}
-
-hr {
-    color: white;
-    width: 100%;
-    height: 1px;
-    border-top: 1px solid white;
-}
-
-.titulo {
-    color: rgba(247, 213, 18, 0.979);
-    text-align: center;
-    letter-spacing:3px;
-    font-size: 50px;
-    font-weight: bold;
-    font-family: Graphica2,'Times New Roman', Times, serif;
-}
-
-
 /* SOBRE MIM */
-
-
 
 
 .minha-imagem{
@@ -203,7 +201,8 @@ hr {
 .soft-skills{
     text-align: center;   
     margin-top: 3%;
-    font-size: 1vw;
+    font-size: medium;
+    
 }
 
 .icon-programacao{
@@ -213,15 +212,15 @@ hr {
 
 @media (max-width: 768px) {
     .soft-skills {
-      padding: 7px 0px 7px 0px ;
-      font-size: 12px; /* Ajuste do tamanho da fonte para telas menores */
+      padding: 7px 0px 7px 0px ;Desenvolvedor de Sistemas
+      
     }
     .icon-programacao{
-        width: 55%;
+        width: 55% ;
         margin-right: 10px;
     }
     .sub-skill{
-        font-size: medium;
+        font-size: large;
     }
   }
   @media (max-width: 576px) {
